--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "text-hider",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Hide Message in Text",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,20 +14,20 @@
   "license": "MIT",
   "devDependencies": {
     "babelify": "^10.0.0",
-    "browserify": "^16.5.1",
+    "browserify": "^16.5.2",
     "minifyify": "^7.3.5",
-    "standard": "^14.3.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "standard": "^14.3.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.19.3",
     "browserify-cipher": "^1.0.1",
     "create-hmac": "^1.1.7",
-    "lzutf8": "^0.6.0",
+    "lzutf8": "^0.5.8",
     "pbkdf2": "^3.1.2",
-    "ramda": "^0.27.1",
+    "ramda": "^0.27.2",
     "randombytes": "^2.1.0",
     "safe-buffer": "^5.2.1",
     "timing-safe-equal": "^1.0.0"
