:recycle: 重构项目入口

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "author": "fzf404",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "webpack"
   },
