--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "text-hider",
   "version": "1.2.1",
   "description": "Hidde Message in Text",
-  "homepage": "https://tool.fzf404.art/hide/",
+  "homepage": "https://tools.fzf404.art/hide/",
   "repository": {
     "type": "git",
     "url": "https://github.com/fzf404/TextHider"
